Adjusted style for both steps of password reset, fixed alignment of top info on invoice view

--- a/wp-content/themes/rentr/css/less/common.less
+++ b/wp-content/themes/rentr/css/less/common.less
@@ -426,11 +426,12 @@ footer .facebook {
     }
 }
 
+// Includes both email form and password form
 #wppb-recover-password {
     ul { margin: 2em 0 0; }
 
     label, ul input {
-        width: auto;
+        width: 8em;
         display: inline-block;
         vertical-align: middle;
         float: none;
@@ -441,6 +442,11 @@ footer .facebook {
     ul input {
         width: 20em;
         max-width: 100%;
+    }
+
+    #pass-strength-result {
+        display: inline-block !important; // override inline style
+        float: none;
     }
 }
 
