--- a/wp-content/themes/rentr/css/less/sprout-invoices.less
+++ b/wp-content/themes/rentr/css/less/sprout-invoices.less
@@ -29,9 +29,9 @@ h3 {
     text-transform: uppercase;
 }
 
-.info {
+div.info {
     display: flex;
-    align-items: top;
+    align-items: flex-start;
     flex-wrap: wrap;
     margin: 0 -2.5rem 2rem;
     line-height: 1.3em;
